--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.2.0",
     "autoprefixer": "^9.7.6",
+    "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "3.0.0",
     "next": "^9.3.6",
     "postcss-import": "^12.0.1",
