markedown to html with marked

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@types/marked": "^0.7.4",
     "autoprefixer": "^9.7.6",
     "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "3.0.0",
