--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-import": "^12.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "tailwindcss": "^1.4.5"
   },
   "devDependencies": {
